SII PCAP Preparation Summary: Google Colaboratory

--- a/PCAP_Preparation_Summary_SII.ipynb
+++ b/PCAP_Preparation_Summary_SII.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SII.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP6APAQ3pV3VDaPQXFNx4df",
+      "authorship_tag": "ABX9TyOzHBXyr+71SMD8c+9Q71Va",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,17 +47,17 @@
       "metadata": {
         "id": "fXrYsIk5fk1z",
         "colab_type": "code",
+        "outputId": "1f04ee6a-f0d2-4414-f005-1784de2541a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "1f04ee6a-f0d2-4414-f005-1784de2541a3"
+        }
       },
       "source": [
         "from math import sqrt\n",
         "sqrt(25)"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,17 +97,17 @@
       "metadata": {
         "id": "-0AvONzOgP0a",
         "colab_type": "code",
+        "outputId": "0bee2921-26bd-4a37-be91-d2744847a649",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "0bee2921-26bd-4a37-be91-d2744847a649"
+        }
       },
       "source": [
         "import math\n",
         "print(dir(math))"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,16 +179,16 @@
       "metadata": {
         "id": "oPB0Lhneho_K",
         "colab_type": "code",
+        "outputId": "c58039f6-d6a3-4aad-d3af-5011d4028f74",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c58039f6-d6a3-4aad-d3af-5011d4028f74"
+        }
       },
       "source": [
         "print(__name__)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,11 +222,11 @@
       "metadata": {
         "id": "OoOZpViXh72z",
         "colab_type": "code",
+        "outputId": "67890afa-3a6c-433a-fcdd-322b28eae769",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
-        },
-        "outputId": "67890afa-3a6c-433a-fcdd-322b28eae769"
+        }
       },
       "source": [
         "import random\n",
@@ -234,7 +234,7 @@
         "x = [random.randint(0, 25) for i in range(10)]\n",
         "plot(x)"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,11 +281,11 @@
       "metadata": {
         "id": "oVS69e7mi89r",
         "colab_type": "code",
+        "outputId": "d4540c0e-10ac-4900-e48f-6aa84fdd1811",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "d4540c0e-10ac-4900-e48f-6aa84fdd1811"
+        }
       },
       "source": [
         "# No try block is executed\n",
@@ -296,7 +296,7 @@
         "except:\n",
         "  print(\"Any other error.\")"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -312,11 +312,11 @@
       "metadata": {
         "id": "zbx7q7i8jSaz",
         "colab_type": "code",
+        "outputId": "72227051-ea01-4005-b09d-e8285a28b710",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "72227051-ea01-4005-b09d-e8285a28b710"
+        }
       },
       "source": [
         "# Portion of the try block is executed and except block is executed\n",
@@ -328,7 +328,7 @@
         "except:\n",
         "  print(\"Any other error.\")"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -345,11 +345,11 @@
       "metadata": {
         "id": "-Z2yKmfHjbmK",
         "colab_type": "code",
+        "outputId": "2bdf0d1d-7b6f-4140-d2b5-799fb438b677",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "2bdf0d1d-7b6f-4140-d2b5-799fb438b677"
+        }
       },
       "source": [
         "# All of try block is executed, no except block is executed.\n",
@@ -360,7 +360,7 @@
         "except:\n",
         "  print(\"Any other error.\")"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,11 +400,11 @@
       "metadata": {
         "id": "NRGd3gzyj-OM",
         "colab_type": "code",
+        "outputId": "7c9ee6c1-7086-432b-999d-beeeb8952a2e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7c9ee6c1-7086-432b-999d-beeeb8952a2e"
+        }
       },
       "source": [
         "try:      \n",
@@ -416,7 +416,7 @@
         "except:\n",
         "  print('c')"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,22 +449,458 @@
       "metadata": {
         "id": "YeirW5KJkZJD",
         "colab_type": "code",
+        "outputId": "0d87df4a-1570-4a68-869e-4416e387d153",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "0d87df4a-1570-4a68-869e-4416e387d153"
+        }
       },
       "source": [
         "for line in open('text.txt','rt'):\n",
         "  print(line)"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "This is a text file.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "apTx4fSjlIE7",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q10. What will be the output of the following snippet?\n",
+        "```\n",
+        "try:\n",
+        "  raise Exception\n",
+        "except:\n",
+        "  print(“c”)\n",
+        "except BaseException:\n",
+        "  print(“a”)\n",
+        "except Exception:\n",
+        "  print(“b”)\n",
+        "```\n",
+        "1. a\n",
+        "2. c\n",
+        "3. b\n",
+        "4. **it will cause an error**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ukOdWTTFlXlC",
+        "colab_type": "code",
+        "outputId": "324bb610-9b2d-4cb2-b021-d4cbeaeabf45",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "# Returns SyntaxError: default 'except:' must be last\n",
+        "try:\n",
+        "  raise Exception\n",
+        "except:\n",
+        "  print('c')\n",
+        "except BaseException:\n",
+        "  print('a')\n",
+        "except Exception:\n",
+        "  print('b')"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-18-d8928c977a16>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    raise Exception\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m default 'except:' must be last\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kaNYpkt9ljbK",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q11. The following statement:\n",
+        "```\n",
+        "assert var != 0\n",
+        "```\n",
+        "1. **will stop the program when var == 0**\n",
+        "2. is erroneous\n",
+        "3. has no effect\n",
+        "4. will stop the program when var != 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M48yVK6Elusp",
+        "colab_type": "code",
+        "outputId": "7b09833a-1aa5-44c8-8426-b679aae76163",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 299
+        }
+      },
+      "source": [
+        "i = 0\n",
+        "var = 5\n",
+        "while i < 10:\n",
+        "  print(i, var)\n",
+        "  var -= 1\n",
+        "  # \"Assertion stoped the program without leading to an infinite loop when v == 0.\"\n",
+        "  assert var != 0\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 5\n",
+            "0 4\n",
+            "0 3\n",
+            "0 2\n",
+            "0 1\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "AssertionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-22-e28ec00c6c15>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[0mvar\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m   \u001b[0;31m# \"Assertion stoped the program without leading to an infinite loop when v == 0.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m   \u001b[0;32massert\u001b[0m \u001b[0mvar\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAssertionError\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JTZ77U1jmgxq",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q12. The following code prints:\n",
+        "```\n",
+        "x = “\\\\\\\\”\n",
+        "print(len(x))\n",
+        "```\n",
+        "1. **2**\n",
+        "2. 1\n",
+        "3. 3\n",
+        "4. the code will cause an error\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B_Qne8ESmtLC",
+        "colab_type": "code",
+        "outputId": "ce375609-54e5-43e3-81a3-bd54a548f2a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "x = '\\\\\\\\'\n",
+        "print(len(x))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "h6TtX-3Vm3u3",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q13. The following code prints:\n",
+        "```\n",
+        "x = “\\\\\\”\n",
+        "print(len(x))\n",
+        "```\n",
+        "1. 3\n",
+        "2. **the code will cause an error**\n",
+        "3. 1\n",
+        "4. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tajsa2PPnBty",
+        "colab_type": "code",
+        "outputId": "8689b591-0539-4edd-b882-258a96866a64",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        }
+      },
+      "source": [
+        "x = '\\\\\\'\n",
+        "print(len(x))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-33-7b55018b19aa>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    x = '\\\\\\'\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z6V6GQymnZHy",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q14. The following code prints:\n",
+        "```\n",
+        "print(chr(ord(‘p’) + 2))\n",
+        "```\n",
+        "1. s\n",
+        "2. t\n",
+        "3. q\n",
+        "4. **r**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "d6B7WDaZnqRy",
+        "colab_type": "code",
+        "outputId": "754cc192-504c-445f-e358-fa9524df27e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(chr(ord('p') + 2))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "r\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cuLPGo0mnz4Q",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q15. The following code:\n",
+        "```\n",
+        "print(float(“1.3”))\n",
+        "```\n",
+        "1. raises a ValueError exception\n",
+        "2. prints 13\n",
+        "3. prints 1,3\n",
+        "4. **1.3**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9k1BDWq7oGaC",
+        "colab_type": "code",
+        "outputId": "fb582f7d-2919-4141-fcd2-dbd64a7cf9b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(float('1.3'))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VNTNYjmgoUQb",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q16. If the class’s constructor is declared as below, which one of the assignments is invalid?\n",
+        "```\n",
+        "class Class:\n",
+        "  def __init__(self,val=0):\n",
+        "    pass\n",
+        "```\n",
+        "1. object = Class(None)\n",
+        "2. object = Class(1)\n",
+        "3. object = Class()\n",
+        "4. **object = Class(1,2)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tbeIr2_-ohdD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "class Class:\n",
+        "  def __init__(self,val=0):\n",
+        "    pass"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fhu5iJGdomkB",
+        "colab_type": "code",
+        "outputId": "f3db8389-74a1-41bb-ba7b-a564724a4371",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 163
+        }
+      },
+      "source": [
+        "# The assignment will lead to TypeError: __init__() takes from 1 to 2 positional arguments but 3 were given\n",
+        "object = Class(1,2)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-39-7a916713adbb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mobject\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mClass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() takes from 1 to 2 positional arguments but 3 were given"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wu9RARiUo4vg",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# All the below declarations are valid.\n",
+        "object = Class(None)\n",
+        "object = Class(1)\n",
+        "object = Class()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "apktAA7xpFOz",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q17. What will be output of the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self,v = 2):\n",
+        "    self.v = v\n",
+        "  def set(self,v = 1):\n",
+        "    self.v += v\n",
+        "    return self.v\n",
+        "a = A()\n",
+        "b = a\n",
+        "b.set()\n",
+        "\n",
+        "print(a.v)\n",
+        "```\n",
+        "1. 0\n",
+        "2. **3**\n",
+        "3. 1\n",
+        "4. 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lq2ikK_spU9i",
+        "colab_type": "code",
+        "outputId": "a7372c5e-607e-433c-db42-6bc2ac166d77",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "class A:\n",
+        "  def __init__(self,v = 2):\n",
+        "    self.v = v\n",
+        "  def set(self,v = 1):\n",
+        "    self.v += v\n",
+        "    return self.v\n",
+        "a = A()\n",
+        "b = a\n",
+        "b.set()\n",
+        "print(a.v)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
           ],
           "name": "stdout"
         }
