SII PCAP Preparation Summary: Google Colaboratory

--- a/PCAP_Preparation_Summary_SII.ipynb
+++ b/PCAP_Preparation_Summary_SII.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "PCAP_Preparation_Summary_SII.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzHBXyr+71SMD8c+9Q71Va",
+      "authorship_tag": "ABX9TyOyaX65QF0/SlPmQkjuBZpZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -904,6 +904,568 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NhcDqQlK2EOv",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q18. What will be output of the following code?\n",
+        "\n",
+        "```\n",
+        "class A:\n",
+        "  A = 1\n",
+        "  def __init__(self):\n",
+        "    self.a = 0\n",
+        "print(hasattr(A,’a’))\n",
+        "```\n",
+        "1. 1\n",
+        "2. **False**\n",
+        "3. 0\n",
+        "4. True"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6EGcIMST2QtU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e606dd45-f1e9-44d9-d858-dbda54b2b0be"
+      },
+      "source": [
+        "class A:\n",
+        "  A = 1\n",
+        "  def __init__(self):\n",
+        "    self.a = 0\n",
+        "print(hasattr(A,'a'))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VMEfW4fE2Zc8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q19. What will be the result of executing the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  pass\n",
+        "class B(A):\n",
+        "  pass\n",
+        "class C(B):\n",
+        "  pass\n",
+        "print(issubclass(A,C))\n",
+        "```\n",
+        "1. **it will print False**\n",
+        "2. it will print True\n",
+        "3. it will print 1\n",
+        "4. it will raise an exception"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kt2i1UBr2pC8",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e33e62be-d0f7-44f8-f3c4-85269fe5de9d"
+      },
+      "source": [
+        "class A:\n",
+        "  pass\n",
+        "class B(A):\n",
+        "  pass\n",
+        "class C(B):\n",
+        "  pass\n",
+        "print(issubclass(A,C))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "saI4PtgH2sTk",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q20. The sys.stderr stream is normally associated with:\n",
+        "1. the keyboard\n",
+        "2. a null device\n",
+        "3. **the screen**\n",
+        "4. the printer\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MBO8X4Ix21M0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q21. What will be the effect of running the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self,v):\n",
+        "    self.__a = v + 1\n",
+        "a = A(0)\n",
+        "print(a.__a)\n",
+        "```\n",
+        "1. it will print 1\n",
+        "2. it will print 2\n",
+        "3. **it will raise an AttributeError exception**\n",
+        "4. it will print 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "80welO4b3BXL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 197
+        },
+        "outputId": "72eb0b51-301d-4931-f886-c377ab355c5e"
+      },
+      "source": [
+        "class A:\n",
+        "  def __init__(self,v):\n",
+        "    self.__a = v + 1\n",
+        "a = A(0)\n",
+        "print(a.__a)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-779aabd6d830>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__a\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__a\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'A' object has no attribute '__a'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UIu7AXjS3Gsc",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q22. What will be the result of executing the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "a = A(1)\n",
+        "print(hasattr(a,'A'))\n",
+        "```\n",
+        "1. it will print True\n",
+        "2. **it will raise an exception**\n",
+        "3. it will print False\n",
+        "4. it will print 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aHbExK643WHU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 214
+        },
+        "outputId": "4b735a8c-4606-4779-e4f4-65e03be6dd8a"
+      },
+      "source": [
+        "class A:\n",
+        "  def __init__(self):\n",
+        "    pass\n",
+        "a = A(1)\n",
+        "print(hasattr(a,'A'))"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-48ed91c9afc6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mA\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhasattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() takes 1 positional argument but 2 were given"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "On3uXY8I3cKj",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q23. What will be the result of executing the following code?\n",
+        "```\n",
+        "class A:\n",
+        "  def a(self):\n",
+        "    print(‘a’)\n",
+        "class B:\n",
+        "  def a(self):\n",
+        "    print(‘b’)\n",
+        "class C(B,A):\n",
+        "  def c(self):\n",
+        "    self.a()\n",
+        "o = C()\n",
+        "o.c()\n",
+        "```\n",
+        "1. it will print c\n",
+        "2. it will raise an exception\n",
+        "3. **it will print b**\n",
+        "4. it will print a"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kwtARlk47eRm",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "3ed711d3-a3af-4445-ad09-0c6e496deb20"
+      },
+      "source": [
+        "class A:\n",
+        "  def a(self):\n",
+        "    print('a')\n",
+        "class B:\n",
+        "  def a(self):\n",
+        "    print('b')\n",
+        "class C(B,A):\n",
+        "  def c(self):\n",
+        "    self.a()\n",
+        "o = C()\n",
+        "o.c()"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "b\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1EDUIf1-8J_N",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q24. What will be the result of executing the following code?\n",
+        "```\n",
+        "try:\n",
+        "  raise Exception(1,2,3)\n",
+        "except Exception as e:\n",
+        "  print(len(e.args))\n",
+        "```\n",
+        "1. it will print 2\n",
+        "2. it will print 1\n",
+        "3. it will raise an unhandled exception\n",
+        "4. **it will print 3**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dDwoHPfJ8S91",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "8edea951-1fe4-4c87-d9d4-7b3fe526c943"
+      },
+      "source": [
+        "try:\n",
+        "  raise Exception(1,2,3)\n",
+        "except Exception as e:\n",
+        "  print(len(e.args))"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bD4fiasB8WEN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q25. What will be the result of executing the following code?\n",
+        "```\n",
+        "def I(n):\n",
+        "  s = ‘+’\n",
+        "for i in range(n):\n",
+        "  s += s\n",
+        "  yield s\n",
+        "for x in I(2):\n",
+        "  print(x,end=”)\n",
+        "```\n",
+        "1. it will print ++\n",
+        "2. **it will print ++++++**\n",
+        "3. it will print +\n",
+        "4. it will print +++"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a_4ugxBX8hrE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a3ceb385-dc90-4498-b272-84dedf754762"
+      },
+      "source": [
+        "def I(n):\n",
+        "  s = '+'\n",
+        "  for i in range(n):\n",
+        "    s += s\n",
+        "    yield s\n",
+        "for x in I(2):\n",
+        "  print(x,end='')"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "++++++"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XJgHC98N8qtN",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q26. What will be the result of executing the following code?\n",
+        "```\n",
+        "class I:\n",
+        "  def __init__(self):\n",
+        "    self.s = ‘abc’\n",
+        "      self.i = 0\n",
+        "  def __iter__(self):\n",
+        "    return self\n",
+        "  def __next__(self):\n",
+        "    if self.i == len(self.s):\n",
+        "      raise StopIteration\n",
+        "      v = self.s[self.i]\n",
+        "      self.i += 1\n",
+        "      return v\n",
+        "for x in I():\n",
+        "print(x,end=”)\n",
+        "```\n",
+        "1. 012\n",
+        "2. **abc**\n",
+        "3. cba\n",
+        "4. 210"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YwW37xvd9Da9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ad511491-03d3-4438-a4bc-d6a5b56efc23"
+      },
+      "source": [
+        "class I:\n",
+        "  def __init__(self):\n",
+        "    self.s = 'abc'\n",
+        "    self.i = 0\n",
+        "  def __iter__(self):\n",
+        "    return self\n",
+        "  def __next__(self):\n",
+        "    if self.i == len(self.s):\n",
+        "      raise StopIteration\n",
+        "    v = self.s[self.i]\n",
+        "    self.i += 1\n",
+        "    return v\n",
+        "for x in I():\n",
+        "  print(x,end='')"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "abc"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "f4E7e70d9T83",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q27. What will be the result of executing the following code?\n",
+        "```\n",
+        "def o(p):\n",
+        "  def q():\n",
+        "    return ‘*’ * p\n",
+        "  return q\n",
+        "r = o(1)\n",
+        "s = o(2)\n",
+        "print(r() + s())\n",
+        "```\n",
+        "1. it will print ****\n",
+        "2. it will print **\n",
+        "3. it will print *** (answer)\n",
+        "4. it will print *"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-9Vb0qS-9gp9",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ffddd0c6-8984-4d1c-a1be-1210b6e86eff"
+      },
+      "source": [
+        "def o(p):\n",
+        "  def q():\n",
+        "    return '*' * p\n",
+        "  return q\n",
+        "r = o(1)\n",
+        "s = o(2)\n",
+        "print(r() + s())"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "***\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mHJFHnBx9nHm",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q28. If s is a stream opened in read mode, the following line will:\n",
+        "```\n",
+        "q = s.read(1)\n",
+        "```\n",
+        "1. **read 1 character from the stream**\n",
+        "2. read 1 kilobyte from the stream\n",
+        "3. read 1 line from the stream\n",
+        "4. read 1 buffer from the stream"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xuXSFY_r9xH8",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q29. Assuming that the open() invocation has gone successfully, the following snippet will:\n",
+        "```\n",
+        "for x in open(‘file’,’rt’):\n",
+        "  print(x)\n",
+        "```\n",
+        "1. read the file character by character\n",
+        "2. cause an exception\n",
+        "3. read the whole file at once\n",
+        "4. **read the file line by line**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NpczLZJS-CMd",
+        "colab_type": "text"
+      },
+      "source": [
+        "Q30. If you want to fill a byte array with data read in from a stream, you’d use:\n",
+        "1. **the readinto() method**\n",
+        "2. the read() method\n",
+        "3. the readbytes() method\n",
+        "4. the readfrom() method"
       ]
     }
   ]
